Updated description day 15, and minor refactoring