@@ -3,10 +3,9 @@ package com.putoet.day15;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public class Sculpture {
-    private List<Disk> disks;
+    private final List<Disk> disks;
     private List<Function<Integer,Integer>> positions;
 
     public Sculpture(List<Disk> disks) {
@@ -14,11 +13,11 @@ public class Sculpture {
         assert disks.size() > 0;
 
         this.disks = new ArrayList<>(disks);
-        this.positions= asPositions(disks);
+        this.positions = asPositions(disks);
     }
 
     private static List<Function<Integer, Integer>> asPositions(List<Disk> disks) {
-        return disks.stream().map(Disk::position).collect(Collectors.toList());
+        return disks.stream().map(Disk::position).toList();
     }
 
     public void add(Disk disk) {
